@@ -19,6 +19,9 @@
 
 package org.apache.datasketches.memory.internal;
 
+import java.lang.foreign.Arena;
+import java.lang.foreign.MemorySegment;
+
 import static org.testng.Assert.assertEquals;
 
 import java.nio.ByteOrder;
@@ -30,8 +33,6 @@ import org.apache.datasketches.memory.MemoryRequestServer;
 import org.apache.datasketches.memory.WritableMemory;
 import org.testng.Assert;
 import org.testng.annotations.Test;
-
-import jdk.incubator.foreign.ResourceScope;
 
 public class CopyMemoryTest {
   private static final MemoryRequestServer memReqSvr = Resource.defaultMemReqSvr;
@@ -78,7 +79,7 @@ public class CopyMemoryTest {
     srcMem.copyTo(0, dstMem, k1 << 3, k1 << 3);
     check(dstMem, k1, k1, 1);
     srcMem.close();
-  }
+    }
 
   @Test
   public void heapWSrcRegion() {
@@ -112,7 +113,6 @@ public class CopyMemoryTest {
     Memory baseMem = genWmem(k1, false);
     //gen src region of k1/2 longs, off= k1/2
     Memory srcReg = baseMem.region((k1/2) << 3, (k1/2) << 3);
-
     WritableMemory dstMem = genMem(2 * k1, true); //empty
     srcReg.copyTo(0, dstMem, k1 << 3, (k1/2) << 3);
     check(dstMem, k1, k1/2, (k1/2) + 1);
@@ -151,7 +151,7 @@ public class CopyMemoryTest {
   }
 
   private static WritableMemory genWmem(int longs, boolean empty) {
-    WritableMemory wmem = WritableMemory.allocateDirect(longs << 3, 1, ResourceScope.newConfinedScope(), ByteOrder.nativeOrder(), memReqSvr);
+    WritableMemory wmem = WritableMemory.allocateDirect(longs << 3, 1, ByteOrder.nativeOrder(), memReqSvr, Arena.ofConfined());
     if (empty) {
       wmem.clear();
     } else {
@@ -176,7 +176,7 @@ public class CopyMemoryTest {
   /**
    * @param s value to print
    */
-  static void println(String s) {
-    //System.out.println(s); //disable here
+  static void println(Object o) {
+    //System.out.println(o); //disable here
   }
 }
